--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,15 +8,15 @@ google-ID: 'UA-112060364-1'
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
 - {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'Contact', path: 'menu', url: 'contact.html'}
+# - {name: 'Contact', path: 'menu', url: 'contact.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
-- {icon: 'github', link: 'https://www.github.com/lenpaul'}
-- {icon: 'twitter', link: 'https://twitter.com/paululele'}
-- {icon: 'linkedin', link: 'http://www.linkedin.com/in/lenpaul/'}
-- {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
-- {icon: 'rss-square', link: 'feed.xml'}
+- {icon: 'github', link: 'https://github.com/jungi21cc'}
+# - {icon: 'twitter', link: 'https://twitter.com/paululele'}
+- {icon: 'linkedin', link: 'https://www.linkedin.com/in/junki-cho-01603163/'}
+# - {icon: 'envelope', link: 'mailto:l.nguyen.paul@gmail.com'}
+# - {icon: 'rss-square', link: 'feed.xml'}
 # - {icon: 'rss-square', link: 'rss-feed.xml'}
 
 # Customize site text
