--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ google-ID: 'UA-114608189-1'
 menu:
 - {name: 'About', path: 'menu', url: 'about.html'}
 - {name: 'Writing', path: 'menu', url: 'writing.html'}
-- {name: 'contents', path: 'menu', url: 'contentst.html'}
+- {name: 'Contents', path: 'menu', url: 'contents.html'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
