new theme test2

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     # twitter:         <username>
-    github:          <jungi21cc>
+    github:          jungi21cc
     # email:           mailto:<mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
@@ -53,7 +53,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        <Junki-Cho-01603163>
+    linkedin:        Junki-Cho-01603163
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
