--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  Journey to the Machine Learning World
+  Machine Learning World
 
 # A list of keywords for your blog
 keywords:              []
