--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ paginate_path:         /page-:num/
 # ========================================================================================
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/200w (2).webp
+accent_image:          /assets/img/maker.gif
 accent_color:          '#4fb1ba'
 
 # The string encoding which fonts to fetch from Google Fonts.
