--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,7 +24,7 @@ author1:
   social:
     # twitter:         <username>
     github:          jungi21cc
-    # email:           mailto:<mail@domain.tld>
+    email:           mailto:<jungi21cc@gmail.com>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
