--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ paginate_path:         /page-:num/
 
 # Sidebar image and theme color of the site.
 accent_image:          /assets/img/half.gif
-accent_color:          '#32055b'
+accent_color:          '#4c048e'
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://qwtel.com/hydejack/docs/configuration/>
