--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,8 @@ paginate_path:         /page-:num/
 # ========================================================================================
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/half.gif
-accent_color:          '#4c048e'
+accent_image:          /assets/img/easy1.gif
+accent_color:          '#0d048e'
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://qwtel.com/hydejack/docs/configuration/>
