fond color updated

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ paginate_path:         /page-:num/
 
 # Sidebar image and theme color of the site.
 accent_image:          /assets/img/easy1.gif
-accent_color:          '#0d048e'
+accent_color:          '#595772'
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://qwtel.com/hydejack/docs/configuration/>
