--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,8 +7,8 @@ author1:
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
-  about:             |
-    Junki Cho
+  # about:             |
+  #   Junki Cho
 
   # This photo will be used in the about section
   # picture:
