--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ paginate_path:         /page-:num/
 # ========================================================================================
 
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/easy1.gif
+accent_image:          /assets/img/easy.mp4
 accent_color:          '#595772'
 
 # The string encoding which fonts to fetch from Google Fonts.
