social updated and some error fixed

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -52,7 +52,7 @@ author1:
     # stackoverflow:   <number/username>
     # npm:             <username>
     # hackernews:      <username>
-    # trello:          <firstnamelastname>
+    kaggle:          jungi21cc
     linkedin:        Junki-Cho-01603163
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
