--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -53,7 +53,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     linkedin:        Junki-Cho-01603163
-    kaggle:          jungi21cc
+    # kaggle:          jungi21cc
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
